ground_truth versus FactCheckResult

--- a/notebooks/viz_belief_distributions.ipynb
+++ b/notebooks/viz_belief_distributions.ipynb
@@ -374,7 +374,7 @@
     "\n",
     "    # Sample depicted runs\n",
     "    n_runs = len(policy_data)\n",
-    "    run_ids = random.sample(range(n_runs), k=n_rows*n_cols)\n",
+    "    run_ids = random.get_groundtruth(range(n_runs), k=n_rows*n_cols)\n",
     "\n",
     "    # Convert & Join data\n",
     "    subplot_data = {}\n",
