--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -30,7 +30,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -94,7 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "MisinfoPy.__init__() got an unexpected keyword argument 'delete_threshold'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [3]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0m model \u001B[38;5;241m=\u001B[39m \u001B[43mMisinfoPy\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn_agents\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mn_agents\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[43m                  \u001B[49m\u001B[43mn_edges\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mn_edges\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      3\u001B[0m \u001B[43m                  \u001B[49m\u001B[43magent_ratio\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43magent_ratio\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      4\u001B[0m \u001B[43m                  \u001B[49m\u001B[43mmedia_literacy_intervention\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mmedia_literacy_intervention\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      5\u001B[0m \u001B[43m                  \u001B[49m\u001B[43mdelete_threshold\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.1\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      6\u001B[0m \u001B[43m                  \u001B[49m\u001B[43mp_true_threshold_ranking\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.2\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[43m                  \u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mTypeError\u001B[0m: MisinfoPy.__init__() got an unexpected keyword argument 'delete_threshold'"
+     ]
+    }
+   ],
    "source": [
     "model = MisinfoPy(n_agents=n_agents,\n",
     "                  n_edges=n_edges,\n",
