Pair Scatterplots, small improvements (e.g., in perform_experiments.py)

--- a/notebooks/error_isolation.ipynb
+++ b/notebooks/error_isolation.ipynb
@@ -40,9 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 10\n",
+      "2 20\n",
+      "3 30\n",
+      "4 40\n",
+      "5 50\n",
+      "6 60\n",
+      "7 70\n",
+      "8 80\n",
+      "9 90\n",
+      "10 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapping = {v: v*10 for v in range(11)}\n",
+    "for k, v in mapping.items():\n",
+    "    print(k,v)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
