Feature Scoring Setup, project hygiene (e.g., utils_dmdu.py)

--- a/notebooks/pairs_scatterplots.ipynb
+++ b/notebooks/pairs_scatterplots.ipynb
@@ -6,10 +6,7 @@
    "outputs": [],
    "source": [
     "from ema_workbench import load_results\n",
-    "from ema_workbench.analysis import (\n",
-    "    pairs_plotting,\n",
-    "    feature_scoring\n",
-    ")\n",
+    "from ema_workbench.analysis import pairs_plotting\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n"
    ],
@@ -34,7 +31,7 @@
     }
    ],
    "source": [
-    "# Indiv Max (DEFFUANT)\n",
+    "# All Max (DEFFUANT)\n",
     "results = load_results('/Users/felicity/PycharmProjects/MisinfoPy/results/open_exploration_all_DEFFUANT')\n",
     "exp, out = results\n",
     "\n",
@@ -66,7 +63,7 @@
     }
    ],
    "source": [
-    "# Indiv Max (SAMPLE)\n",
+    "# All Max (SAMPLE)\n",
     "results = load_results('/Users/felicity/PycharmProjects/MisinfoPy/results/open_exploration_all_SAMPLE')\n",
     "exp, out = results\n",
     "\n",
@@ -98,7 +95,7 @@
     }
    ],
    "source": [
-    "# Indiv Max (SIT)\n",
+    "# All Max (SIT)\n",
     "results = load_results('/Users/felicity/PycharmProjects/MisinfoPy/results/open_exploration_all_SIT')\n",
     "exp, out = results\n",
     "\n",
