parcoords_all.ipynb & feature scoring notebooks。成功了！

--- a/notebooks/pairs_scatterplots_50_policies.ipynb
+++ b/notebooks/pairs_scatterplots_50_policies.ipynb
@@ -245,14 +245,18 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "## Take-Aways\n",
+    "1) For most outcomes, the results of the 3 BeliefUpdateFn's overlap rather a lot\n",
+    "2) For the polarization measure (variance of how people's beliefs are distributed between 0 and 100), there is a clear grouping visible.\n",
+    "3) Higher variance can roughly be equated with higher polarization. SIT tends to have the highest amounts of polarisation, while DEFFUANT tends to have the lowest. Thus: Deffuant < Sample < SIT (amount of polarization)\n",
+    "4) Lower amounts of user effort correlates with higher polarization. This seems to make intuitive sense in situations where agents need to rely on themselves to analyze the veracity of posts"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
