before re-structuring (started epsilon_values.ipynb)

--- a/notebooks/error_isolation.ipynb
+++ b/notebooks/error_isolation.ipynb
@@ -74,6 +74,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi!\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
