--- a/dmdu/exploration/epsilon_values.ipynb
+++ b/dmdu/exploration/epsilon_values.ipynb
@@ -1257,6 +1257,83 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deffuant:\n",
+      "1.0: \t N_AGENTS_ABOVE_BELIEF_THRESHOLD\n",
+      "0.5: \t POLARIZATION_VARIANCE\n",
+      "10000: \t ENGAGEMENT\n",
+      "0.01: \t FREE_SPEECH_CONSTRAINT\n",
+      "0.5: \t AVG_USER_EFFORT\n",
+      "\n",
+      "\n",
+      "sample:\n",
+      "1.0: \t N_AGENTS_ABOVE_BELIEF_THRESHOLD\n",
+      "1.0: \t POLARIZATION_VARIANCE\n",
+      "\n",
+      "\n",
+      "sit:\n",
+      "1.0: \t N_AGENTS_ABOVE_BELIEF_THRESHOLD\n",
+      "1.0: \t POLARIZATION_VARIANCE\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'deffuant:')\n",
+    "for bufn, v in deffuant_epsilons.items():\n",
+    "    print(f'{v}: \\t {bufn.name}')\n",
+    "\n",
+    "print(f'\\n\\nsample:')\n",
+    "for bufn, v in sample_epsilons.items():\n",
+    "    print(f'{v}: \\t {bufn.name}')\n",
+    "\n",
+    "print(f'\\n\\nsit:')\n",
+    "for bufn, v in sit_epsilons.items():\n",
+    "    print(f'{v}: \\t {bufn.name}')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The engagement metric was adjusted after this. Instead of being the **TOTAL** amount of seen posts over all agents (over the complete run), it is now the average **PER AGENT**.\n",
+    "Thus, with the used n_agents of 1000, the epsilon value is adjusted from 10,000 to 10."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Epsilon Values\n",
+    "1 – N_AGENTS_ABOVE_BELIEF_THRESHOLD\n",
+    "1.0 – POLARIZATION_VARIANCE\n",
+    "10 – ENGAGEMENT\n",
+    "0.01 – FREE_SPEECH_CONSTRAINT\n",
+    "0.5 – AVG_USER_EFFORT"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
