adjusted Engagement metric (now per agent)

--- a/dmdu/exploration/epsilon_values.ipynb
+++ b/dmdu/exploration/epsilon_values.ipynb
@@ -1306,6 +1306,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Note:\n",
     "The engagement metric was adjusted after this. Instead of being the **TOTAL** amount of seen posts over all agents (over the complete run), it is now the average **PER AGENT**.\n",
     "Thus, with the used n_agents of 1000, the epsilon value is adjusted from 10,000 to 10."
    ],
