non-crucial small changes

--- a/error_isolation.ipynb
+++ b/error_isolation.ipynb
@@ -5,7 +5,8 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "from misinfo_model import MisinfoPy"
+    "import pandas as pd\n",
+    "from model.misinfo_model import MisinfoPy"
    ],
    "metadata": {
     "collapsed": false,
@@ -16,31 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.12023774795664699"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = MisinfoPy()\n",
-    "model.random.random()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -74,29 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hey!\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
