--- a/dmdu/exploration/seed_analysis.ipynb
+++ b/dmdu/exploration/seed_analysis.ipynb
@@ -14,6 +14,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 1. Quantile Data // calculate it and save it"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [],
@@ -36,6 +48,7 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
+    "need_quantile_data = False\n",
     "considered_quantiles = [0.1, 0.25, 0.5, 0.75, 0.9]\n"
    ],
    "metadata": {
@@ -46,58 +59,28 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "# 1. Quantile Data // calculate it and save it"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
    "source": [
     "# Quantile Data // calculate it and save it\n",
-    "for belief_update_fn in list(BeliefUpdate):\n",
-    "    # Loading data\n",
-    "    path = os.path.join(os.getcwd(), 'data', 'seedanalysis', belief_update_fn.name, 'outcomes.csv')\n",
-    "    outcomes = pd.read_csv(path)\n",
-    "    outcomes = outcomes.rename(columns={'Unnamed: 0': 'uncert_sample'})\n",
-    "    outcome_names = [o for o in outcomes.columns if o not in ['uncert_sample', 'seed']]\n",
+    "if need_quantile_data:  # only if it really should be re-calculated\n",
+    "    for belief_update_fn in list(BeliefUpdate):\n",
+    "        # Loading data\n",
+    "        path = os.path.join(os.getcwd(), 'data', 'seedanalysis', belief_update_fn.name, 'outcomes.csv')\n",
+    "        outcomes = pd.read_csv(path)\n",
+    "        outcomes = outcomes.rename(columns={'Unnamed: 0': 'uncert_sample'})\n",
+    "        outcome_names = [o for o in outcomes.columns if o not in ['uncert_sample', 'seed']]\n",
     "\n",
-    "    for outcome in outcome_names:\n",
-    "        quantile_data = calculate_quantiles(outcomes_data=outcomes, outcome=outcome, quantiles=considered_quantiles)\n",
+    "        for outcome in outcome_names:\n",
+    "            quantile_data = calculate_quantiles(outcomes_data=outcomes, outcome=outcome, quantiles=considered_quantiles)\n",
     "\n",
-    "        # Save resulting data into csv\n",
-    "        dir_path = os.path.join(os.getcwd(), 'data', 'seedanalysis', belief_update_fn.name, 'quantiles')\n",
-    "        make_sure_path_exists(dir_path)\n",
-    "        file_name = str(outcome) + '.csv'\n",
-    "        path = os.path.join(dir_path, file_name)\n",
-    "        quantile_data.to_csv(path)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "# TODO: Plotting of the data\n",
-    "# - read-in the right data from the right files\n",
-    "# - combine the data as needed\n",
-    "#       - quartiles: median and interquartile range\n",
-    "#           1 plot per objective, incl. for each bufn median line and interquartile envelope\n",
-    "#       - 10-and-90%ile?"
+    "            # Save resulting data into csv\n",
+    "            dir_path = os.path.join(os.getcwd(), 'data', 'seedanalysis', belief_update_fn.name, 'quantiles')\n",
+    "            make_sure_path_exists(dir_path)\n",
+    "            file_name = str(outcome) + '.csv'\n",
+    "            path = os.path.join(dir_path, file_name)\n",
+    "            quantile_data.to_csv(path)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -120,97 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "# Load data function\n",
-    "def get_data(belief_update_fn, metric):\n",
-    "    \"\"\"\n",
-    "    Loading and preparing the requested data.\n",
-    "    @param belief_update_fn: BeliefUpdate\n",
-    "    @param metric: string, from ['avg_user_effort', 'engagement', 'free_speech_constraint', 'n_agents_above_belief_threshold', 'polarization_variance']\n",
-    "    @return: pd.Dataframe\n",
-    "    \"\"\"\n",
-    "    path = os.path.join(os.getcwd(), 'data', 'seedanalysis', belief_update_fn.name, 'quantiles')\n",
-    "    file_name = '/' + metric + '.csv'\n",
-    "    metric_data = pd.read_csv(path + file_name)\n",
-    "    metric_data = metric_data.rename(columns={'Unnamed: 0': 'n_seeds'})\n",
-    "\n",
-    "    # add belief_update_fn column?\n",
-    "    metric_data['belief_update_fn'] = belief_update_fn.name\n",
-    "\n",
-    "    return metric_data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "# Plot quartiles function\n",
-    "def plot_quartiles(data, title=None, y_min=0, y_max=600, fig_size=(10, 7), x_tick_freq=5):\n",
-    "    \"\"\"\n",
-    "    # TODO: FILL THIS\n",
-    "    @param data:\n",
-    "    @param title:\n",
-    "    @param y_min:\n",
-    "    @param y_max:\n",
-    "    @param fig_size:\n",
-    "    @param x_tick_freq:\n",
-    "    @return:\n",
-    "    \"\"\"\n",
-    "    # only quartile data\n",
-    "    data = data[['n_seeds','0.25', '0.5', '0.75', 'belief_update_fn']]\n",
-    "\n",
-    "    # TODO: Decide wrt below attempt of making the y_max programmatic\n",
-    "    # set y-axis max\n",
-    "    # if y_max is None:\n",
-    "        # curr_max = 0\n",
-    "        # for col_name in data.columns:\n",
-    "        #     new_max = data[col_name].max()\n",
-    "        #     print(f'new_max: {type(new_max), new_max} \\n '\n",
-    "        #           f'curr_max: {type(curr_max)}')\n",
-    "        #     if not isinstance(new_max, str):  # ugly workaround because at some point, new_max is 'SIT'?!\n",
-    "        #         if new_max > curr_max:\n",
-    "        #             curr_max = new_max\n",
-    "        # y_max = curr_max + (0.1 * curr_max)  # some padding to the top\n",
-    "\n",
-    "    # plotting\n",
-    "    sns.set(rc={'figure.figsize': fig_size})\n",
-    "    plt.ylim(y_min, y_max)\n",
-    "    ticks = list(range(0, len(data) + 1, x_tick_freq))\n",
-    "    plt.xticks(ticks=ticks)\n",
-    "    plt.ylabel(metric)\n",
-    "\n",
-    "    sns.lineplot(x='n_seeds', y='0.5', data=data, label='median')\n",
-    "    sns.lineplot(x='n_seeds', y='0.25', data=data, label='25% quantile')\n",
-    "    sns.lineplot(x='n_seeds', y='0.75', data=data, label='75% quantile')\n",
-    "\n",
-    "    if title:\n",
-    "        plt.title(title, fontsize=20)\n",
-    "\n",
-    "    plt.legend(loc=2, bbox_to_anchor=(1,1))"
+    "from dmdu.exploration.seed_analysis_utils import get_data, plot_quartiles, plot_quartiles_metric_bufn_combo"
    ],
    "metadata": {
     "collapsed": false,
@@ -233,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "metric = 'avg_user_effort'\n",
@@ -258,16 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
-   "source": [
-    "def plot_quartiles_metric_bufn_combo(metric, belief_update_fn, data_mapping, y_min=None, y_max=None):\n",
-    "\n",
-    "    # title = f'{metric}: {belief_update_fn}'\n",
-    "    data = data_mapping[belief_update_fn]\n",
-    "\n",
-    "    plot_quartiles(data=data, title=belief_update_fn, y_min=y_min, y_max=y_max)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -277,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -301,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -325,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -361,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "metric = 'engagement'\n",
@@ -386,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -410,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -434,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -470,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "metric = 'free_speech_constraint'\n",
@@ -494,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
@@ -518,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
@@ -542,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
@@ -578,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "metric = 'n_agents_above_belief_threshold'\n",
@@ -603,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
@@ -627,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
@@ -651,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
@@ -687,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "metric = 'polarization_variance'\n",
@@ -711,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -735,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
@@ -759,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
@@ -783,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "outputs": [],
    "source": [],
    "metadata": {
