--- a/dmdu/exploration/epsilon_values.ipynb
+++ b/dmdu/exploration/epsilon_values.ipynb
@@ -1321,11 +1321,11 @@
    "cell_type": "markdown",
    "source": [
     "# Epsilon Values\n",
-    "1 – N_AGENTS_ABOVE_BELIEF_THRESHOLD\n",
-    "1.0 – POLARIZATION_VARIANCE\n",
-    "10 – ENGAGEMENT\n",
-    "0.01 – FREE_SPEECH_CONSTRAINT\n",
-    "0.5 – AVG_USER_EFFORT"
+    "- 1 – N_AGENTS_ABOVE_BELIEF_THRESHOLD\n",
+    "- 1.0 – POLARIZATION_VARIANCE\n",
+    "- 10 – ENGAGEMENT (now per agent, thus: 10k -> 10)\n",
+    "- 0.01 – FREE_SPEECH_CONSTRAINT\n",
+    "- 0.5 – AVG_USER_EFFORT"
    ],
    "metadata": {
     "collapsed": false,
