--- a/dmdu/exploration/evaluate_full_data.ipynb
+++ b/dmdu/exploration/evaluate_full_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,19 +11,36 @@
     "# imports\n",
     "from ema_workbench.analysis import parcoords\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from ema_workbench import load_results\n",
     "import seaborn as sns\n",
     "import os\n",
     "from model.enums import BeliefUpdate\n",
     "from dmdu.utils_dmdu import get_lever_names, get_outcome_names\n",
     "\n",
-    "sns.set(rc={'figure.figsize': (14, 10)})\n"
+    "sns.set(rc={'figure.figsize': (14, 10)})"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "### Loading the data (results)"
+    "# Overall Plan:\n",
+    "1. avg over replications\n",
+    "2. non-dominated sort -> Pareto-optimal policies (& their outcomes)\n",
+    "3. parallel axis plots of levers & outcomes (to inspect Pareto-optimal policies)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Loading the data (results), avg over replications, save into .csv\n",
+    "(can just avg bc replications to make sure that sensitivity to stochasticity is not an issue wrt reproducibility)"
    ],
    "metadata": {
     "collapsed": false,
@@ -34,20 +51,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "ReadError",
+     "evalue": "not a gzip file",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mBadGzipFile\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36mgzopen\u001B[0;34m(cls, name, mode, fileobj, compresslevel, **kwargs)\u001B[0m\n\u001B[1;32m   1679\u001B[0m         \u001B[0;32mtry\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1680\u001B[0;31m             \u001B[0mt\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcls\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtaropen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmode\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfileobj\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1681\u001B[0m         \u001B[0;32mexcept\u001B[0m \u001B[0mOSError\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36mtaropen\u001B[0;34m(cls, name, mode, fileobj, **kwargs)\u001B[0m\n\u001B[1;32m   1656\u001B[0m             \u001B[0;32mraise\u001B[0m \u001B[0mValueError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"mode must be 'r', 'a', 'w' or 'x'\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1657\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mcls\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmode\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfileobj\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1658\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36m__init__\u001B[0;34m(self, name, mode, fileobj, format, tarinfo, dereference, ignore_zeros, encoding, errors, pax_headers, debug, errorlevel, copybufsize)\u001B[0m\n\u001B[1;32m   1519\u001B[0m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfirstmember\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1520\u001B[0;31m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfirstmember\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mnext\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1521\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36mnext\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m   2320\u001B[0m             \u001B[0;32mtry\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 2321\u001B[0;31m                 \u001B[0mtarinfo\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtarinfo\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfromtarfile\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   2322\u001B[0m             \u001B[0;32mexcept\u001B[0m \u001B[0mEOFHeaderError\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36mfromtarfile\u001B[0;34m(cls, tarfile)\u001B[0m\n\u001B[1;32m   1109\u001B[0m         \"\"\"\n\u001B[0;32m-> 1110\u001B[0;31m         \u001B[0mbuf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mtarfile\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfileobj\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mBLOCKSIZE\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1111\u001B[0m         \u001B[0mobj\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcls\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfrombuf\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mbuf\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtarfile\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mencoding\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtarfile\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0merrors\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/gzip.py\u001B[0m in \u001B[0;36mread\u001B[0;34m(self, size)\u001B[0m\n\u001B[1;32m    299\u001B[0m             \u001B[0;32mraise\u001B[0m \u001B[0mOSError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0merrno\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mEBADF\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"read() on write-only GzipFile object\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 300\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_buffer\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msize\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    301\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/_compression.py\u001B[0m in \u001B[0;36mreadinto\u001B[0;34m(self, b)\u001B[0m\n\u001B[1;32m     67\u001B[0m         \u001B[0;32mwith\u001B[0m \u001B[0mmemoryview\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mb\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mview\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mview\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcast\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"B\"\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mbyte_view\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 68\u001B[0;31m             \u001B[0mdata\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mlen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mbyte_view\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     69\u001B[0m             \u001B[0mbyte_view\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0mlen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/gzip.py\u001B[0m in \u001B[0;36mread\u001B[0;34m(self, size)\u001B[0m\n\u001B[1;32m    486\u001B[0m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_init_read\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 487\u001B[0;31m                 \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_read_gzip_header\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    488\u001B[0m                     \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_size\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_pos\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/gzip.py\u001B[0m in \u001B[0;36m_read_gzip_header\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    434\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mmagic\u001B[0m \u001B[0;34m!=\u001B[0m \u001B[0;34mb'\\037\\213'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 435\u001B[0;31m             \u001B[0;32mraise\u001B[0m \u001B[0mBadGzipFile\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Not a gzipped file (%r)'\u001B[0m \u001B[0;34m%\u001B[0m \u001B[0mmagic\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    436\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mBadGzipFile\u001B[0m: Not a gzipped file (b',b')",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[0;31mReadError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-2-709a98eadbbf>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      8\u001B[0m     \u001B[0mfilename\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m\"full_factorial\"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34mf\"_{n_repl}_replications\"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34mf\"_{bufn.name}\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m     \u001B[0mresults_path\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgetcwd\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"data\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfilename\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 10\u001B[0;31m     \u001B[0mexperiments\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0moutcomes\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mload_results\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mresults_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     11\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     12\u001B[0m     \u001B[0;31m# # Avg over replications\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/ema_workbench/util/utilities.py\u001B[0m in \u001B[0;36mload_results\u001B[0;34m(file_name)\u001B[0m\n\u001B[1;32m     44\u001B[0m     \u001B[0mfile_name\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mabspath\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfile_name\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     45\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 46\u001B[0;31m     \u001B[0;32mwith\u001B[0m \u001B[0mtarfile\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mopen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfile_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"r:gz\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mencoding\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"UTF8\"\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0marchive\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     47\u001B[0m         \u001B[0;32mtry\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     48\u001B[0m             \u001B[0mf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0marchive\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mextractfile\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"metadata.json\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36mopen\u001B[0;34m(cls, name, mode, fileobj, bufsize, **kwargs)\u001B[0m\n\u001B[1;32m   1625\u001B[0m             \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1626\u001B[0m                 \u001B[0;32mraise\u001B[0m \u001B[0mCompressionError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"unknown compression type %r\"\u001B[0m \u001B[0;34m%\u001B[0m \u001B[0mcomptype\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1627\u001B[0;31m             \u001B[0;32mreturn\u001B[0m \u001B[0mfunc\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfilemode\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfileobj\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1628\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1629\u001B[0m         \u001B[0;32melif\u001B[0m \u001B[0;34m\"|\"\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mmode\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tarfile.py\u001B[0m in \u001B[0;36mgzopen\u001B[0;34m(cls, name, mode, fileobj, compresslevel, **kwargs)\u001B[0m\n\u001B[1;32m   1682\u001B[0m             \u001B[0mfileobj\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mclose\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1683\u001B[0m             \u001B[0;32mif\u001B[0m \u001B[0mmode\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;34m'r'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1684\u001B[0;31m                 \u001B[0;32mraise\u001B[0m \u001B[0mReadError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"not a gzip file\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1685\u001B[0m             \u001B[0;32mraise\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1686\u001B[0m         \u001B[0;32mexcept\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mReadError\u001B[0m: not a gzip file"
+     ]
+    }
+   ],
    "source": [
     "# Params  # TODO: make a function 'load_my_csv(nfe, bufn, filename, seed=None)' make it also remove the \"Unnamed: 0\" col\n",
-    "nfe = 50000\n",
-    "bufn = BeliefUpdate.DEFFUANT\n",
+    "n_repl = 30\n",
+    "bufns = list(BeliefUpdate)  # [BeliefUpdate.DEFFUANT]  # -> BeliefUpdate.list\n",
     "\n",
-    "# Loading the results\n",
-    "results_path = os.path.join(os.getcwd(), \"data\", f\"{nfe}_nfe\", bufn.name, \"results.csv\")\n",
-    "results = pd.read_csv(results_path)\n",
+    "for bufn in bufns:\n",
     "\n",
-    "# Dropping unwanted column\n",
-    "results = results.rename(columns={\"Unnamed: 0\": \"policy\"})\n",
-    "results\n"
+    "    # Loading the results\n",
+    "    filename = \"full_factorial\" + f\"_{n_repl}_replications\" + f\"_{bufn.name}\"\n",
+    "    results_path = os.path.join(os.getcwd(), \"data\", filename)\n",
+    "    experiments, outcomes = load_results(results_path)\n",
+    "\n",
+    "    # # Avg over replications\n",
+    "    # avgs_outcomes = {}\n",
+    "    # for metric in outcomes.keys():\n",
+    "    #     avgs = np.mean(outcomes[metric], axis=1)\n",
+    "    #     avgs_outcomes[metric] = avgs\n",
+    "    #\n",
+    "    # # Save into .csv  (dict -> df -> .csv)\n",
+    "    # avgs_outcomes = pd.DataFrame(avgs_outcomes)\n",
+    "    # out_filename = f\"outcomes_{bufn.name}.csv\"\n",
+    "    # path = os.path.join(os.getcwd(), \"data\", out_filename)\n",
+    "    # avgs_outcomes.to_csv(path)\n",
+    "    #\n",
+    "    # exp_filename = f\"experiments_{bufn.name}.csv\"\n",
+    "    # path = os.path.join(os.getcwd(), \"data\", exp_filename)\n",
+    "    # experiments.to_csv(path)"
    ],
    "metadata": {
     "collapsed": false,
@@ -61,13 +120,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# rescale lever values (0-10 -> 0-100, 0-5 -> 0-50)\n",
-    "lever_names = get_lever_names()\n",
-    "for col_name in results.columns:\n",
-    "    if col_name in lever_names:\n",
-    "        results[col_name] *= 10\n",
+    "# deffuant_out = outcomes_dict[BeliefUpdate.DEFFUANT.name]\n",
+    "#\n",
+    "# deffuant_out\n",
     "\n",
-    "results"
+    "\n",
+    "# # Dropping unwanted column\n",
+    "# results = results.rename(columns={\"Unnamed: 0\": \"policy\"})\n",
+    "# results\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -81,7 +141,27 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "data_dict = {BeliefUpdate.DEFFUANT.name: results}"
+    "# # rescale lever values (0-10 -> 0-100, 0-5 -> 0-50)\n",
+    "# lever_names = get_lever_names()\n",
+    "# for col_name in results.columns:\n",
+    "#     if col_name in lever_names:\n",
+    "#         results[col_name] *= 10\n",
+    "#\n",
+    "# results"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# data_dict = {BeliefUpdate.DEFFUANT.name: results}"
    ],
    "metadata": {
     "collapsed": false,
