--- a/error_isolation.ipynb
+++ b/error_isolation.ipynb
@@ -186,6 +186,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "scenarios = []\n",
+    "\n",
+    "if not scenarios:\n",
+    "    print(\"empty\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "scenarios = None\n",
+    "\n",
+    "if not scenarios:\n",
+    "    print(\"empty\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
